# sql-context-pack

./: .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  Changelog.md  LICENSE  README.md  gemini-extension.json  install.ps1  pyproject.toml  requiremenr.raw.prompt.md  sql_contxt_pack_design_spc_v1.2.md
.agents/plugins/: marketplace.json
.agrimap-agent/: config.json  current-memory.md
.agrimap-agent/knowledge/: service-ownership.yaml
.agrimap-agent/logs/: 2026-07-21.md
.agrimap-agent/memory/: project.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
config/: profiles.example.yaml
docs/: acceptance-criteria.md  agent-harness-lifecycle.md  api-and-mcp-examples.md  architecture.md  codex-marketplace.md  command-reference.md  getting-started.md  global-installation.md  harness-compatibility.md  implementation-state.md  output-format.md  release-report.md  requirements.md  security.md  server-operations.md  troubleshooting.md  use-cases.md  versioning.md  working-guide.md
docs/harnesses/: claude-code.md  codex.md  gemini-cli.md
docs/issues/: resolved-v1.5-cutoff.md
docs/spec/: design-spec-v1.10.md  design-spec-v1.10.sha256  design-spec-v1.11.sha256  design-spec-v1.12.sha256  design-spec-v1.13.md  design-spec-v1.13.sha256  design-spec-v1.14.md  design-spec-v1.14.sha256  design-spec-v1.15.md  design-spec-v1.15.sha256  design-spec-v1.16.md  design-spec-v1.16.sha256  design-spec-v1.17.md  design-spec-v1.17.sha256  design-spec-v1.18.md  design-spec-v1.18.sha256  design-spec-v1.19.md  design-spec-v1.19.sha256  design-spec-v1.20.md  design-spec-v1.20.sha256  design-spec-v1.21.md  design-spec-v1.21.sha256  design-spec-v1.22.md  (+8 more)
harnesses/: conformance.py
hooks/: hooks.json
prompts/: requiremenr.raw.prompt.md  requiremenr.raw.prompt.sha256  sql_contxt_pack_design_spc_v1.5_start.md  sql_contxt_pack_design_spc_v1.9_start.md  statictisc.md
scripts/: bootstrap.ps1  bootstrap.py  configure_profile.py  dev-check.ps1  generate_contract_schemas.py  global_install.py  harness-smoke.ps1  install-global.ps1  install-guide.py  install-owner-package-active.py  install_fingerprint.py  lifecycle.ps1  mcp-inspector.ps1  mcp-inspector.sh  python-preflight.ps1  python-preflight.sh  service-manager.py  sqlctx_windows_service.py  start-server.ps1  validate_manifests.py  windows-service.ps1
(+240 files in other folders)
