[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-context-pack"
dynamic = ["version"]
description = "Build sanitized, classified, AI-ready SQL context bundles."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SQL Context Pack contributors" }]
dependencies = [
  "cryptography==49.0.0",
  "email-validator==2.3.0",
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "mcp==1.28.1",
  "pydantic==2.13.4",
  "PyYAML==6.0.3",
  "sqlfluff==4.2.2",
  "typer==0.27.0",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
sqlserver = ["pyodbc==5.3.0"]
postgres = ["psycopg[binary]==3.3.4"]
mysql = ["PyMySQL==1.2.0"]
mariadb = ["mariadb==1.1.14"]
oracle = ["oracledb==4.0.2"]
all-databases = [
  "pyodbc==5.3.0",
  "psycopg[binary]==3.3.4",
  "PyMySQL==1.2.0",
  "mariadb==1.1.14",
  "oracledb==4.0.2",
]
dev = [
  "build==1.5.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.22",
  "setuptools==83.0.0",
  "types-PyYAML==6.0.12.20260518",
  "wheel==0.47.0",
]

[project.scripts]
sqlctx = "sqlctx.cli.main:app"
sqlctx-server = "sqlctx.server.http.app:run"

[tool.setuptools.dynamic]
version = { attr = "sqlctx._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqlctx = ["data/*.yaml", "py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "E501"]

[tool.ruff.lint.per-file-ignores]
"src/sqlctx/adapters/**/*.py" = ["S105", "S608"]
"src/sqlctx/core/enums.py" = ["S105"]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sqlctx"]
exclude = ["tests/fixtures"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["psycopg", "pymysql", "mariadb", "oracledb", "pyodbc"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlctx.server.mcp.server"
disable_error_code = ["untyped-decorator", "no-any-return"]

[tool.sqlctx]
product-version = "1.0.3"
output-format-version = "1"
sqlfluff-version = "4.2.2"
mcp-sdk-version = "1.28.1"
